--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -1031,38 +1031,319 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1174"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS).\n"
+    "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS).\n",
+    "tenth_graders = school_data_complete_df.loc[(school_data_complete_df[\"grade\"]== \"10th\")\n",
+    "                            &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")].count()['Student ID']\n",
+    "eleventh_graders = school_data_complete_df.loc[(school_data_complete_df[\"grade\"]== \"11th\")\n",
+    "                            &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")].count()['Student ID']\n",
+    "twelfth_graders = school_data_complete_df.loc[(school_data_complete_df[\"grade\"]== \"12th\")\n",
+    "                            &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")].count()['Student ID']\n",
+    "\n",
+    "total_students = tenth_graders + eleventh_graders + twelfth_graders\n",
+    "total_students"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1094"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 6. Get all the students passing math from THS\n"
+    "# Step 6. Get all the students passing math from THS\n",
+    "passing_math = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & \n",
+    "                                           (school_data_complete_df[\"math_score\"] >= 70)].count()[\"Student ID\"]\n",
+    "passing_math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1139"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 7. Get all the students passing reading from THS\n"
+    "# Step 7. Get all the students passing reading from THS\n",
+    "passing_reading = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"]==\"Thomas High School\") & \n",
+    "                            (school_data_complete_df[\"reading_score\"] >= 70)].count()[\"Student ID\"]\n",
+    "passing_reading\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>37535</th>\n",
+       "      <td>37535</td>\n",
+       "      <td>Norma Mata</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37536</th>\n",
+       "      <td>37536</td>\n",
+       "      <td>Cody Miller</td>\n",
+       "      <td>M</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37541</th>\n",
+       "      <td>37541</td>\n",
+       "      <td>Eric Stevens</td>\n",
+       "      <td>M</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37542</th>\n",
+       "      <td>37542</td>\n",
+       "      <td>Elizabeth Bennett</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37544</th>\n",
+       "      <td>37544</td>\n",
+       "      <td>Jacqueline Harris</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39163</th>\n",
+       "      <td>39163</td>\n",
+       "      <td>John Reese</td>\n",
+       "      <td>M</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39165</th>\n",
+       "      <td>39165</td>\n",
+       "      <td>Donna Howard</td>\n",
+       "      <td>F</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39166</th>\n",
+       "      <td>39166</td>\n",
+       "      <td>Dawn Bell</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39168</th>\n",
+       "      <td>39168</td>\n",
+       "      <td>Desiree Kidd</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39169</th>\n",
+       "      <td>39169</td>\n",
+       "      <td>Carolyn Jackson</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1064 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Student ID       student_name gender grade         school_name  \\\n",
+       "37535       37535         Norma Mata      F  10th  Thomas High School   \n",
+       "37536       37536        Cody Miller      M  11th  Thomas High School   \n",
+       "37541       37541       Eric Stevens      M  10th  Thomas High School   \n",
+       "37542       37542  Elizabeth Bennett      F  11th  Thomas High School   \n",
+       "37544       37544  Jacqueline Harris      F  10th  Thomas High School   \n",
+       "...           ...                ...    ...   ...                 ...   \n",
+       "39163       39163         John Reese      M  11th  Thomas High School   \n",
+       "39165       39165       Donna Howard      F  12th  Thomas High School   \n",
+       "39166       39166          Dawn Bell      F  10th  Thomas High School   \n",
+       "39168       39168       Desiree Kidd      F  10th  Thomas High School   \n",
+       "39169       39169    Carolyn Jackson      F  11th  Thomas High School   \n",
+       "\n",
+       "       reading_score  math_score  School ID     type  size   budget  \n",
+       "37535           76.0        76.0         14  Charter  1635  1043130  \n",
+       "37536           84.0        82.0         14  Charter  1635  1043130  \n",
+       "37541           80.0        76.0         14  Charter  1635  1043130  \n",
+       "37542           91.0        94.0         14  Charter  1635  1043130  \n",
+       "37544           71.0        92.0         14  Charter  1635  1043130  \n",
+       "...              ...         ...        ...      ...   ...      ...  \n",
+       "39163           90.0        75.0         14  Charter  1635  1043130  \n",
+       "39165           99.0        90.0         14  Charter  1635  1043130  \n",
+       "39166           95.0        70.0         14  Charter  1635  1043130  \n",
+       "39168           99.0        90.0         14  Charter  1635  1043130  \n",
+       "39169           95.0        75.0         14  Charter  1635  1043130  \n",
+       "\n",
+       "[1064 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 8. Get all the students passing math and reading from THS\n"
+    "# Step 8. Get all the students passing math and reading from THS\n",
+    "total_students_passing = school_data_complete_df.loc[(school_data_complete_df[\"math_score\"] >= 70) \n",
+    "                 & (school_data_complete_df[\"reading_score\"] >= 70)\n",
+    "                &(school_data_complete_df[\"school_name\"]==\"Thomas High School\")]\n",
+    "total_students_passing"
    ]
   },
   {
